--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - ./.env_docker
     ports:
       - "6379:6379"
+    restart: on-failure
   db:
     image: postgres:15.2
     environment:
@@ -18,6 +19,7 @@ services:
       - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    restart: on-failure
   bot:
     build: .
     command: sh -c "python -m bot"
@@ -26,6 +28,7 @@ services:
     depends_on:
       - db
       - redis
+    restart: always
 
 volumes:
   pgdata:
