--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,10 @@ services:
       - "6379:6379"
     restart: on-failure
   db:
-    image: postgres:15.2
+    image: postgres:15.2-alpine
     environment:
       POSTGRES_PASSWORD: PG_PASSWORD
+      POSTGRES_USER: PG_USER
     env_file:
       - ./.env_docker
     volumes:
